model and openapi update, 2022-10-26 YAML update
